--- a/Source/Fixes.csproj
+++ b/Source/Fixes.csproj
@@ -3,9 +3,9 @@
         <TargetFramework>netstandard2.1</TargetFramework>
         <AssemblyName>GeneralFixes</AssemblyName>
         <Description>The vanilla fixes!</Description>
-        <Version>1.0.1</Version>
+        <Version>1.0.2</Version>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <LangVersion>latest</LangVersion>
+        <LangVersion>preview</LangVersion>
         <RestoreAdditionalProjectSources>
             https://api.nuget.org/v3/index.json;
             https://nuget.bepinex.dev/v3/index.json
@@ -20,10 +20,6 @@
         <TOS>C:\Program Files (x86)\Steam\steamapps\common\Town of Salem 2</TOS>
     </PropertyGroup>
 
-    <ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
-        <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.3" PrivateAssets="all" />
-    </ItemGroup>
-
     <ItemGroup>
         <EmbeddedResource Include="Resources\*" />
         <PackageReference Include="HarmonyX" Version="2.10.1" />
@@ -32,7 +28,6 @@
         <Reference Include="UnityEngine.UI"><HintPath>Lib\UnityEngine.UI.dll</HintPath></Reference>
         <Reference Include="SalemModLoader"><HintPath>Lib\SalemModLoader.dll</HintPath></Reference>
         <Reference Include="Unity.TextMeshPro"><HintPath>Lib\Unity.TextMeshPro.dll</HintPath></Reference>
-        <Reference Include="Newtonsoft.Json"><HintPath>Lib\Newtonsoft.Json.dll</HintPath></Reference>
         <Reference Include="Witchcraft"><HintPath>Lib\Witchcraft.dll</HintPath></Reference>
         <Reference Include="BetterTOS2"><HintPath>Lib\BetterTOS2.dll</HintPath></Reference>
     </ItemGroup>
